# Geometry

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
CommandInterface/: CMakeLists.txt
CommandInterface/include/CommandInterface/: CommandInterface.hpp
CommandInterface/source/: CommandInterface.cpp  main.cpp
Geometry/: CMakeLists.txt
Geometry/include/Geometry/: Point.hpp  Polyline.hpp  RectangularMatrix.hpp  Vector.hpp  concepts.hpp
Graphics/: CMakeLists.txt
Graphics/include/Graphics/: SpatialBuffer.hpp
Tests/: CMakeLists.txt
Tests/source/: main.cpp  test_matrix.cpp  test_polyline.cpp
examples/: CMakeLists.txt
examples/source/: main.cpp
